--- a/mobile_flutter_lab-main/mobile_weather/pubspec.yaml
+++ b/mobile_flutter_lab-main/mobile_weather/pubspec.yaml
@@ -27,6 +27,16 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  flutter_lints: ^1.0.0
+  http: ^0.13.3
+  async: ^2.8.1
+  provider: ^6.0.1
+  intl: ^0.17.0
+  flutter_dotenv: ^5.0.2
+  shared_preferences: ^2.0.8
+  flutter_neumorphic:
+    git:
+      url: https://github.com/tsvillain/Flutter-Neumorphic.git
   sliding_up_panel: ^2.0.0+1
   flutter:
     sdk: flutter
