--- a/mobile_flutter_lab-main/mobile_weather/pubspec.yaml
+++ b/mobile_flutter_lab-main/mobile_weather/pubspec.yaml
@@ -27,6 +27,19 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  flutter:
+    sdk: flutter
+#  flutter_stack_card: ^0.2.0+1
+#  flutter_slider_indicator: ^0.1.1
+
+  # The following adds the Cupertino Icons font to your application.
+  # Use with the CupertinoIcons class for iOS style icons.
+  cupertino_icons: ^1.0.2
+
+
+dev_dependencies:
+  flutter_test:
+    sdk: flutter
   flutter_lints: ^1.0.0
   http: ^0.13.3
   async: ^2.8.1
@@ -34,22 +47,11 @@ dependencies:
   intl: ^0.17.0
   flutter_dotenv: ^5.0.2
   shared_preferences: ^2.0.8
+
   flutter_neumorphic:
     git:
       url: https://github.com/tsvillain/Flutter-Neumorphic.git
   sliding_up_panel: ^2.0.0+1
-  flutter:
-    sdk: flutter
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
-
-dev_dependencies:
-  flutter_test:
-    sdk: flutter
-
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
