--- a/mobile_flutter_lab-main/mobile_weather/pubspec.yaml
+++ b/mobile_flutter_lab-main/mobile_weather/pubspec.yaml
@@ -31,7 +31,7 @@ dependencies:
     sdk: flutter
 #  flutter_stack_card: ^0.2.0+1
 #  flutter_slider_indicator: ^0.1.1
-
+  card_swiper : ^1.0.4
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -102,3 +102,6 @@ flutter:
   # see https://flutter.dev/custom-fonts/#from-packages
   assets:
     - assets/
+    - assets/WeatherIcons/
+    - assets/WeatherItems/
+    - .env
